krishi-model/k8s/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-server-loadbalancer
  namespace: krishi-sahayak
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
  selector:
    app: ml-server
